# StellarEyes

./: LICENSE  README.md  settings.gradle.kts
.github/workflows/: main.yml
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/fun/fifu/stellareyes/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/kotlin/fun/fifu/stellareyes/: FaceNet.kt  MainActivity.kt  NcnnController.kt  ScreenShotUtil.kt
app/src/main/kotlin/fun/fifu/stellareyes/data/: VectorSearchEngine.kt
app/src/main/kotlin/fun/fifu/stellareyes/ui/camera/: CameraPreview.kt  FaceBoundingBoxOverlay.kt  FaceRecognition.kt  ImageUtils.kt  StellarEyesAppScreen.kt
app/src/main/kotlin/fun/fifu/stellareyes/ui/managefaces/: ManageFacesScreen.kt  ManageFacesViewModel.kt
app/src/main/kotlin/fun/fifu/stellareyes/ui/permissions/: PermissionDeniedScreen.kt
app/src/main/kotlin/fun/fifu/stellareyes/ui/settings/: AboutScreen.kt  AppDataStore.kt  SettingsScreen.kt  SettingsViewModel.kt
app/src/main/kotlin/fun/fifu/stellareyes/ui/theme/: DarkColorScheme.kt  Purple80.kt  Typography.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/fun/fifu/stellareyes/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
